Fixing iOS blurry text

--- a/docs/dev/assets/scss/_help.scss
+++ b/docs/dev/assets/scss/_help.scss
@@ -25,8 +25,6 @@
   @extend %scut-vcenter-ib;
 
   display: none;
-  backface-visibility: hidden;
-  perspective: 1000;
   transition-property: opacity, transform;
   transition-duration: 0.3s;
   opacity: 0;
